src/test/resources/json/invalid_inputs/invalid_start_position.json.except
Starting robot's position should be on 'S' but it is standing on 'C' instead.